...
      android:text="@string/fragment_swipe_down_retry_message"
      android:textColor="@color/white" />

  </LinearLayout>

  <com.github.ybq.android.spinkit.SpinKitView
    android:id="@+id/spinkitView"
    style="@style/SpinKitView.Large.FoldingCube"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/wallpaper_fragment_center_spinkit_height"
    android:layout_gravity="center"
    android:padding="@dimen/wallpaper_fragment_center_spinkit_padding"
    android:visibility="gone"
...
  <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:scrollbars="vertical" />

  </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>

...
