<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/contentHamburger"
      style="@style/HamburgerImageButtonTheme"
      android:layout_centerVertical="true"
      android:clickable="true"
      android:src="@drawable/ic_hamburger_vertical" />

    <com.zebrostudio.wallrcustoms.customtextview.WallrCustomTextView
      android:id="@+id/toolbarTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:text="@string/explore_title"
      android:textSize="@dimen/guillotine_item_text_size" />

    <ImageView
      android:id="@+id/toolbarSearchIcon"
      android:layout_width="@dimen/toolbar_menu_imagebutton_width"
      android:layout_height="@dimen/toolbar_menu_imagebutton_height"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:clickable="true"
      android:padding="@dimen/toolbar_menu_imagebutton_padding"
      android:src="@drawable/ic_search_white" />

    <ImageView
      android:id="@+id/toolbarMultiSelectIcon"
      android:layout_width="@dimen/toolbar_menu_imagebutton_width"
      android:layout_height="@dimen/toolbar_menu_imagebutton_height"
      android:layout_alignParentRight="true"
      android:layout_centerVertical="true"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:clickable="true"
      android:padding="@dimen/toolbar_menu_imagebutton_padding"
      android:src="@drawable/ic_select_all_white" />

  </RelativeLayout>

</FrameLayout>