...
      android:background="@color/primary"
      app:layout_behavior="@string/appbar_scrolling_view_behavior" />

  </androidx.coordinatorlayout.widget.CoordinatorLayout>

  <RelativeLayout
    android:id="@+id/minimalBottomLayout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_activity_minimal_bottom_layout_height"
    android:layout_gravity="bottom">

    <View
      android:id="@+id/shadow_spinner"
...

    </androidx.percentlayout.widget.PercentRelativeLayout>

  </RelativeLayout>

  <com.getbase.floatingactionbutton.FloatingActionButton
    android:id="@+id/minimalBottomLayoutFab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_marginEnd="11dp"
    android:layout_marginBottom="@dimen/main_activity_fab_margin_botom"
    android:elevation="8dp"
...
