...
    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbarGuillotineMenu"
      style="@style/ToolbarTheme"
      app:contentInsetStart="@dimen/toolbar_contentinset_start">

      <ImageView
        android:id="@+id/hamburgerGuillotineMenu"
        style="@style/HamburgerImageButtonTheme"
        android:paddingTop="@dimen/guillotine_hamburger_padding_top"
        android:src="@drawable/ic_hamburger_horizontal" />

      <RelativeLayout
        android:layout_width="wrap_content"
...
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/app_name"
          android:textSize="@dimen/guillotine_menu_apptitle_size" />

        <com.zebrostudio.wallrcustoms.customtextview.WallrCustomTextView
          android:id="@+id/proBadgeGuillotineMenu"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toRightOf="@id/appTitleGuillotineMenu"
          android:paddingLeft="@dimen/guillotine_menu_probadge_padding_left"
          android:paddingTop="@dimen/guillotine_menu_probadge_padding_top"
          android:text="@string/guillotine_pro_badge"
...
